# microverse-model

./: .clinerules  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
checkpoints/: ckpt_000000.safetensors  ckpt_000100.safetensors
datasets/: rick_morty_all_transcripts.csv  rick_morty_s4_s8_transcripts.csv  rick_morty_s4_s8_transcripts.json  rick_morty_transcripts_clean.csv  train_corpus.txt  val_corpus.txt
docs/: architecture.md  cli.md  generation.md  index.md  microverse_project_plan.md  model.md  reference-audio-guide.md  training.md  voice-synthesis.md
docs/diagrams/: c4-components.puml  c4-containers.puml  c4-context.puml  data-flow.puml  model-architecture.puml  speak-sequence.puml  training-sequence.puml
docs/memorybank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
examples/: basic_usage.rs
python/: tts.py
scripts/: preprocessor.rs  scraper.rs
src/: dataset.rs  generate.rs  lib.rs  main.rs  model.rs  tokenizer.rs  train.rs  tts_bridge.rs
