[package]
name = "microverse-model"
version = "0.1.0"
edition = "2021"
authors = ["r1cm3d"]
license = "MIT OR Apache-2.0"
description = "A SLM implemented in Rust, using all subtitles from the Rick and Morty series as training data."
homepage = "https://github.com/r1cm3d/microverse-model"
repository = "https://github.com/r1cm3d/microverse-model"
documentation = "https://docs.rs/microverse-model"
readme = "README.md"
keywords = ["microverse", "model", "simulation"]
categories = ["science", "simulation"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "scraper"
path = "scripts/scraper.rs"

[[bin]]
name = "preprocessor"
path = "scripts/preprocessor.rs"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
