[package]
name = "microverse-model"
version = "0.1.0"
edition = "2021"
authors = ["r1cm3d"]
license = "MIT OR Apache-2.0"
description = "A SLM implemented in Rust, using all subtitles from the Rick and Morty series as training data."
homepage = "https://github.com/r1cm3d/microverse-model"
repository = "https://github.com/r1cm3d/microverse-model"
documentation = "https://docs.rs/microverse-model"
readme = "README.md"
keywords = ["microverse", "model", "simulation"]
categories = ["science", "simulation"]
rust-version = "1.75"
default-run = "microverse-model"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
candle-core = "0.9.2"
candle-nn = "0.9.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
rand = "0.8"

[[bin]]
name = "scraper"
path = "scripts/scraper.rs"

[[bin]]
name = "preprocessor"
path = "scripts/preprocessor.rs"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
